# pico-template

./: CMakeLists.txt  main.cpp  readme.md
